networkpolicies/simple-example/allow-label-to-label.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-label-to-label
  namespace: "y"
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      pod: a
#      pod: b
  ingress:
  - from:
    - podSelector:
        matchLabels:
          pod: c
