networkpolicies/simple-example/deny-all-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-egress
  namespace: "y"
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress: []
