networkpolicies/simple-example/deny-all-for-label.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-for-label
  namespace: "y"
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      pod: a
  ingress: []
