networkpolicies/simple-example/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
  namespace: "y"
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress: []
